# Lango_FastAPI

./: .env  .gitignore  Dockerfile  Dockerfile.prod  config.py  main.py  models.py  pyproject.toml  requirements.txt
routers/: lemmatize.py
services/: lemmatizer.py
src/: config.py  dependencies.py  main.py  nlp_models.py
src/repositories/: lemmas_repository.py  lemmas_translations_repository.py  suggestions_repository.py  words_repository.py
src/routers/: lemmatize.py  mongo.py  suggestions.py
src/services/: lemmas_service.py  lemmatizer.py  suggestions_service.py
