[tool.poetry]
name = "fastapi-app"
version = "0.1.0"
description = ""
authors = ["Oktawian Kausz kauszoktawian@gmail.com"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
uvicorn = "*"
pydantic-settings = "*"
motor = "*"
spacy = "*"
morfeusz2 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"